--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,17 +28,10 @@ jobs:
 
       - name: 📦 Install Dependencies
         run: |
-          flutter pub global activate very_good_cli
-          flutter pub global activate intl_utils 2.8.4
-          flutter pub global activate coverage
-
-      - name: 🦄 Generate Code
-        run: |
-          flutter pub global run intl_utils:generate
-          dart run build_runner build --delete-conflicting-outputs
+          flutter pub get
   
-      # - name: ✨ Check Formatting
-      #   run: dart format --set-exit-if-changed .
+      - name: ✨ Check Formatting
+        run: dart format --set-exit-if-changed .
 
       - name: 🕵️ Analyze
         run: flutter analyze .
